@@ -1,4 +1,8 @@
 {
+  "c.ringstrom@gmail.com": {
+    "mails": ["c.ringstrom@gmail.com"],
+    "name": "Charlie Ringström"
+  },
   "134317971+correctmost@users.noreply.github.com": {
     "mails": ["134317971+correctmost@users.noreply.github.com"],
     "name": "correctmost"
